--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ label{
     background-color: greenyellow;
     border-radius: 50%;
     font-size: 20px;
-    position: absolute;
+    position: fixed;
     top: 20px;
     right: 20px;
     z-index: 1;
@@ -105,7 +105,7 @@ input[type="checkbox"]:checked ~ .container{
 
   #venstre_forside img{
     width: 100%;
-    min-height:100vh;
+    min-height:100%;
     display:flex;
   }
 
@@ -118,11 +118,31 @@ input[type="checkbox"]:checked ~ .container{
     align-items: center;
   }
 
+  #venstre_opdag img{
+    width: 100%;
+    min-height:100%;
+    display:flex;
+  }
+
+  #hojre_opdag{
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #hojre_opdag h1{
+    color:#ffffff;
+    font-size: 50px;
+    margin-top:70px;
+  }
+
   #hojre_forside h1{
     color:#ffffff;
     font-size: 70px;
     margin-top:70px;
-    z-index: 1;
   }
 
 
@@ -132,22 +152,40 @@ input[type="checkbox"]:checked ~ .container{
     margin: 50px;
   }
 
-
-  .info{
-    width: 100%;
-    min-height: 100vh;
-    background: paleturquoise;
+  #forsidescroll{
     display: flex;
+    justify-content: center;
+    background-color: black;
+    padding: 20px;
+  }
+
+
+  .footer{
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+  }
+#footer_tekst{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background-color: black;
+
+}
+#footer_VV{
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
 
-.info h2{
-    margin: auto;
-    font-size: 50px;
-    color: black;
+#footer_VV h1{
+    color: white;
+    font-size: 150px;
+    padding-top:30px;
+    display: flex;
+    
 }
 
-
-
-
-
+#footer_tekst p{
+    color: white;
+}
   
