--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,18 @@
+@font-face {
+    font-family: 'Helvetica'; /* Specify font family name */
+    src: url('HelveticaRoman.ttf');
+}
+
+
+h1, h2, h3 {
+    font-family: 'Georama';
+    font-weight: 800; /* Georama ExtraBold */
+}
+
+p {
+    font-family: 'Helvetica';
+}
+
 *{
     box-sizing: border-box;
     margin: 0;
@@ -103,10 +118,13 @@ input[type="checkbox"]:checked ~ .container{
     grid-template-columns: 1fr 1fr;
 }
 
+/*styling af øverst på forsiden */
+
   #venstre_forside img{
     width: 100%;
-    min-height:100%;
-    display:flex;
+    height: 100vh;/* Set height to fill the screen vertically */
+    object-fit: cover; /* Maintain aspect ratio and cover entire container */
+    display: block; /* Ensure the image behaves like a block element */
   }
 
   #hojre_forside{
@@ -118,6 +136,33 @@ input[type="checkbox"]:checked ~ .container{
     align-items: center;
   }
 
+  #hojre_forside h1{
+    color:#ffffff;
+    font-size: 70px;
+    font-weight: 900;
+    margin-top:70px;
+  }
+
+
+  #hojre_forside p{
+    color: #ffffff;
+    font-size: 18px;
+    margin: 80px;
+  }
+
+
+
+
+/* lille logo før content på forside */
+
+  #forsidescroll{
+    display: flex;
+    justify-content: center;
+    background-color: black;
+    padding: 20px;
+  }
+
+  /* opdag volume village på forside */
   #venstre_opdag img{
     width: 100%;
     min-height:100%;
@@ -139,25 +184,7 @@ input[type="checkbox"]:checked ~ .container{
     margin-top:70px;
   }
 
-  #hojre_forside h1{
-    color:#ffffff;
-    font-size: 70px;
-    margin-top:70px;
-  }
-
-
-  #hojre_forside p{
-    color: #ffffff;
-    font-size: 18px;
-    margin: 50px;
-  }
-
-  #forsidescroll{
-    display: flex;
-    justify-content: center;
-    background-color: black;
-    padding: 20px;
-  }
+  /*footer styling*/
 
 
   .footer{
@@ -168,7 +195,7 @@ input[type="checkbox"]:checked ~ .container{
 #footer_tekst{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    background-color: black;
+    background-color: white;
 
 }
 #footer_VV{
@@ -182,7 +209,7 @@ input[type="checkbox"]:checked ~ .container{
     font-size: 150px;
     padding-top:30px;
     display: flex;
-    
+    letter-spacing: 15px; /* Adjust the value as needed */
 }
 
 #footer_tekst p{
