--- a/styles.css
+++ b/styles.css
@@ -184,6 +184,8 @@ input[type="checkbox"]:checked ~ .container{
     margin-top:70px;
   }
 
+  /*volume village club og venue side*/
+
   /*footer styling*/
 
 
