--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,15 @@
 h1, h2, h3 {
     font-family: 'Georama';
     font-weight: 800; /* Georama ExtraBold */
+    color: #ffffff;
 }
 
 p {
     font-family: 'Helvetica';
+}
+
+body {
+  background-color: black;
 }
 
 *{
@@ -26,7 +31,7 @@ input[type="checkbox"]{
 label{
     width: 50px;
     height: 50px;
-    background-color: greenyellow;
+    background-color: rgb(255, 255, 255);
     border-radius: 50%;
     font-size: 20px;
     position: fixed;
@@ -39,13 +44,13 @@ label{
 
 label i {
     margin: auto;
-    color: #ffffff;
+    color: #000000;
 }
 
 .container{
     width: 100%;
     height: 100%;
-    background: pink;
+    background: rgb(255, 255, 255);
     position:fixed;
     top: 0;
     left: 0;
@@ -67,7 +72,7 @@ input[type="checkbox"]:checked ~ .container{
 
 .menu a{
     text-decoration: none;
-    color: green;
+    color: rgb(0, 0, 0);
     font-size: 70px;
     font-weight: bold;
     margin: 14px 0;
@@ -107,6 +112,19 @@ input[type="checkbox"]:checked ~ .container{
     text-decoration: none;
     font-size: 50px;
   }
+
+/* Logo forside */
+.logo {
+  position: absolute;
+  top: 20px; 
+  left: 20px; 
+  z-index: 999; 
+}
+
+.logo img {
+  width: 70px; 
+  height: auto; 
+}
 
 /* Styling af grid layout */
 #grid {
@@ -182,6 +200,111 @@ input[type="checkbox"]:checked ~ .container{
     color:#ffffff;
     font-size: 50px;
     margin-top:70px;
+  }
+
+   /*event side*/
+   #overskrift_arrangementer {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-top: 150px; 
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  margin-right: 20px;
+}
+
+.dropdown-btn {
+  background-color: black;
+  color: white;
+  border: 1px solid white;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: black;
+  border: 1px solid white;
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: white;
+  padding: 10px;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: grey;
+}
+
+.dropdown-content input[type="checkbox"] {
+  display: inline;
+  margin-right: 5px;
+}
+
+/* Vis dropdown-indhold, når knappen klikkes */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.box-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+  .box-container {
+    width: 472px;
+    height: 580px;
+    background-color: #191818;
+    padding: 10px;
+    margin: 10px;
+    box-sizing: border-box;
+    position: relative;
+  }
+  
+  .box-image {
+    width: 415px;
+    height: 234px;
+    border-radius: 10px;
+  }
+  
+  .text {
+    font-family: Helvetica, sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    margin-top: 10px;
+    color: #fff;
+  }
+  
+  .title {
+    font-family: Georama, sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 10px;
+    color: #fff;
+  }
+  
+  .button {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #000;
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    padding: 5px 10px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+
+  .box:nth-child(3n) {
+    margin-right: 0; /* Fjern højremargin for hver tredje boks på rækken */
   }
 
   /*footer styling*/
