--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ h1, h2, h3 {
 
 p {
     font-family: 'Helvetica';
+    color: white;
 }
 
 body {
@@ -127,12 +128,12 @@ input[type="checkbox"]:checked ~ .container{
   height: auto; 
 }
 
-/* Styling af grid layout */
+/* Styling af grid layout på forside*/
 #grid {
     overflow: hidden;
   }
 
-.forside{
+.forside_grid{
     display:grid;
     grid-template-columns: 1fr 1fr;
 }
@@ -174,18 +175,85 @@ input[type="checkbox"]:checked ~ .container{
 
 /* lille logo før content på forside */
 
-  #forsidescroll{
+  #forside_scroll{
     display: flex;
     justify-content: center;
     background-color: black;
-    padding: 20px;
+    padding-top: 40px;
   }
 
+  /*upcomming events*/
+
+#upcomming{
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  padding-top: 20px;
+}
+
+#upcomming h1{
+  font-size: 70px;
+}
+
+.slider{
+  position:relative;
+  width:100%;
+  margin:auto;
+  overflow:hidden;
+  padding-top:40px;
+}
+
+.slider img {
+  width: 100%; /* Reset width */
+  height: 80vh; /* Set height to 100vh */
+  padding-left: 48px; /* Adjust padding as needed */
+  padding-right: 48px; /* Adjust padding as needed */
+  object-fit: cover; /* Ensure images cover the entire container */
+  display: none;
+}
+img.displayUpcomming_slide{
+  display:block;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+
+
+.slider button{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 2rem;
+  padding: 15px;
+  background-color: black;
+  color:white;
+  border:none;
+  cursor: pointer;
+}
+
+.prev{
+  left:0;
+}
+
+.next{
+  right: 0;
+}
+
+@keyframes fade {
+  from {opacity: .5}
+  to {opacity: 1}
+}
+
   /* opdag volume village på forside */
+
+  #forside_opdag{
+    padding-top: 40px;
+  }
   #venstre_opdag img{
     width: 100%;
-    min-height:100%;
-    display:flex;
+    height: 100vh;/* Set height to fill the screen vertically */
+    object-fit: cover; /* Maintain aspect ratio and cover entire container */
+    display: block; /* Ensure the image behaves like a block element */
   }
 
   #hojre_opdag{
