--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,7 @@ label i {
     clip-path: circle(25px at calc(100% - 45px) 45px);
     transition: all 500ms ease-in-out;
     display: flex;
+    z-index: 1;
 }
 
 input[type="checkbox"]:checked ~ .container{
@@ -270,6 +271,52 @@ img.displayUpcomming_slide{
     font-size: 50px;
     margin-top:70px;
   }
+
+  /* Club volume og volume venue */
+  #venstre_clubvenue{
+    width: 100%;
+    height: 100vh;/* Set height to fill the screen vertically */
+    object-fit: cover; /* Maintain aspect ratio and cover entire container */
+    display: block; /* Ensure the image behaves like a block element */
+  }
+
+  #hojre_clubvenue img{
+    width: 100%;
+    height: 100vh;/* Set height to fill the screen vertically */
+    object-fit: cover; /* Maintain aspect ratio and cover entire container */
+    display: block; /* Ensure the image behaves like a block element */
+  }
+
+  .play-on-hover{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end; /* Align items to the bottom */
+    background-image: url(img/vvclub.png);
+    background-repeat: no-repeat; /* Prevent background image from repeating */
+    background-size: cover; /* Cover the entire container */
+    cursor: pointer;
+  }
+
+
+
+.text {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  color: white;
+  font-size: 24px;
+  width: 100%;
+}
+
+  .play-on-hover:hover{
+    background-image: url(img/blaagroen\ 2.gif);
+  }
+
 
    /*event side*/
    #overskrift_arrangementer {
