--- a/styles.css
+++ b/styles.css
@@ -489,13 +489,28 @@ img.displayUpcomming_slide{
 
 .event-box h1 {
   font-size: 24px;
+  font-family: 'Georama';
+    font-weight: 800; /* Georama ExtraBold */
   margin-bottom: 10px;
   text-align: left;
 }
 
 .event-box p {
+  font-family: 'Helvetica', sans-serif;
+  font-size: 18px;
   margin: 10px 0;
   text-align: left;
+}
+
+.event-box .address {
+  font-size: 16px; /* Different size for the address paragraph */
+}
+
+.event-box .divider {
+  border: 0;
+  height: 1px;
+  background: #ffffff;
+  margin: 10px 0;
 }
 
 .ticket-box {
