--- a/styles.css
+++ b/styles.css
@@ -1,139 +1,183 @@
 @font-face {
-    font-family: 'Helvetica'; /* Specify font family name */
-    src: url('HelveticaRoman.ttf');
+  font-family: 'Helvetica'; /* Specify font family name */
+  src: url('HelveticaRoman.ttf');
 }
 
-
 h1, h2, h3 {
-    font-family: 'Georama';
-    font-weight: 800; /* Georama ExtraBold */
-    color: #ffffff;
+  font-family: 'Georama';
+  font-weight: 800; /* Georama ExtraBold */
+  color: #ffffff;
 }
 
 h1 {
-  text-align: center;
+text-align: center;
 }
 
 p {
-    font-family: 'Helvetica';
-    color: white;
+  font-family: 'Helvetica';
+  color: white;
 }
 
 body {
-  background-color: black;
-  overflow-y: scroll;
+background-color: black;
+overflow-y: scroll;
+margin: 0;
+padding: 0;
+font-family: sans-serif;
 }
 
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-}
-input[type="checkbox"]{
-    display:none;
+input[type="checkbox"] {
+display: none;
 }
 
-
-
-label{
-    width: 50px;
-    height: 50px;
-    background-color: rgb(255, 255, 255);
-    border-radius: 50%;
-    font-size: 20px;
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    z-index: 2;
-    cursor: pointer;
-    display: flex;
+label {
+width: 50px;
+height: 50px;
+background-color: rgb(255, 255, 255);
+border-radius: 50%;
+font-size: 20px;
+position: fixed;
+top: 20px;
+right: 20px;
+z-index: 2;
+cursor: pointer;
+display: flex;
 }
 
 label i {
-    margin: auto;
-    color: #000000;
+margin: auto;
+color: #000000;
 }
 
-.container{
-    width: 100%;
-    height: 100%;
-    background: rgb(255, 255, 255);
-    position:fixed;
-    top: 0;
-    left: 0;
-    clip-path: circle(25px at calc(100% - 45px) 45px);
-    transition: all 500ms ease-in-out;
-    display: flex;
-    z-index: 1;
+.container {
+width: 100%;
+height: 100%;
+background: rgb(255, 255, 255);
+position: fixed;
+top: 0;
+left: 0;
+clip-path: circle(25px at calc(100% - 45px) 45px);
+transition: all 500ms ease-in-out;
+display: grid;
+grid-template-columns: 1fr 1fr 1fr;
+z-index: 1;
 }
 
-input[type="checkbox"]:checked ~ .container{
-    clip-path: circle(100%);
+input[type="checkbox"]:checked ~ .container {
+clip-path: circle(100%);
 }
 
-.menu{
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.menu {
+margin: auto;
+display: flex;
+flex-direction: column;
+align-items: center;
 }
 
-.menu a{
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    font-size: 70px;
-    font-weight: bold;
-    margin: 14px 0;
+.menu a {
+text-decoration: none;
+color: rgb(0, 0, 0);
+font-size: 50px;
+font-weight: bold;
+margin: 14px 0;
 }
 
-.menu a::before{
-    content:attr(data-text);
-    position: absolute;
-    width: 100%;
-    color:#000000;
-    transition: 700ms ease-in-out;
+.menu a::before {
+content: attr(data-text);
+position: absolute;
+width: 100%;
+color: #000000;
+transition: 700ms ease-in-out;
 }
 
-/* Subnav button */
 .subnav .subnavbtn {
-    border: none;
-    outline: none;
-    font-size: 70px;
-    font-weight: bold;
-    color: rgb(0, 0, 0);
-    margin: 0;
-  }
-  /* Style the subnav content - positioned absolute */
-.subnav-content {
-    display: none;
-    display: flex;
-    flex-direction: column;
-    position: inherit;
-    left: 65%;
-    background-color: rgb(255, 255, 255);
-    width: 100%;
-    z-index: 1;
-  }
-  
-  /* Style the subnav links */
-  .subnav-content a {
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-    font-size: 50px;
-  }
+border: none;
+outline: none;
+font-size: 50px;
+font-weight: bold;
+color: rgb(0, 0, 0);
+margin: 0;
+}
 
-/* Logo forside */
+.subnav-content-container {
+  display: flex;
+  justify-content: flex-end; /* Align content to the right */
+  position: relative; /* Add position relative to make absolute positioning work */
+}
+
+.subnav-content {
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  top: 0;
+  right: 0; /* Position to the right */
+  background-color: rgb(255, 255, 255);
+  width: 100%;
+  z-index: 1;
+}
+
+.subnav-content a {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  font-size: 50px;
+}
+
+/*lille logo som content på forsiden*/
+
 .logo {
-  position: absolute;
-  top: 20px; 
-  left: 20px; 
-  z-index: 999; 
+position: absolute;
+top: 20px;
+left: 20px;
+z-index: 999;
 }
 
 .logo img {
-  width: 70px; 
-  height: auto; 
+width: 70px;
+height: auto;
+}
+
+/*footer*/
+#footer_tekst {
+display: grid;
+grid-template-columns: 1fr 1fr;
+background-color: white;
+}
+
+#footer_VV {
+display: flex;
+justify-content: center;
+text-align: center;
+}
+
+#footer_VV h1 {
+color: white;
+font-size: 150px;
+padding-top: 30px;
+display: flex;
+letter-spacing: 15px;
+}
+
+.footer {
+width: 100%;
+height: 100vh;
+background-color: black;
+}
+
+#footer_tekst p {
+color: white;
+}
+
+/* Logo forside */
+.logo {
+position: absolute;
+top: 20px; 
+left: 20px; 
+z-index: 999; 
+}
+
+.logo img {
+width: 70px; 
+height: auto; 
 }
 
 /* Styling af grid layout på forside*/
@@ -280,50 +324,88 @@ img.displayUpcomming_slide{
   }
 
   /* Club volume og volume venue */
-  #venstre_clubvenue{
-    width: 100%;
-    height: 100vh;/* Set height to fill the screen vertically */
-    object-fit: cover; /* Maintain aspect ratio and cover entire container */
-    display: block; /* Ensure the image behaves like a block element */
-  }
 
-  #hojre_clubvenue img{
-    width: 100%;
-    height: 100vh;/* Set height to fill the screen vertically */
-    object-fit: cover; /* Maintain aspect ratio and cover entire container */
-    display: block; /* Ensure the image behaves like a block element */
-  }
-
-  .play-on-hover{
+  #venstre_clubvenue, #hojre_clubvenue {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 100vh; /* Set height to fill the screen vertically */
     display: flex;
-    justify-content: center;
-    align-items: flex-end; /* Align items to the bottom */
-    background-image: url(img/vvclub.png);
-    background-repeat: no-repeat; /* Prevent background image from repeating */
-    background-size: cover; /* Cover the entire container */
+    flex-direction: column;
+    justify-content: space-between; /* Space the text containers */
+    align-items: center; /* Center text horizontally */
     cursor: pointer;
-  }
-
-
-
-.text {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  text-align: center;
-  color: white;
-  font-size: 24px;
-  width: 100%;
 }
 
-  .play-on-hover:hover{
-    background-image: url(img/blaagroen\ 2.gif);
-  }
+#hojre_clubvenue img {
+    width: 100%;
+    height: 100vh; /* Set height to fill the screen vertically */
+    object-fit: cover; /* Maintain aspect ratio and cover entire container */
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+}
 
+.play-on-hover {
+    background-image: url(img/vvclub.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    z-index: 0;
+}
+
+.play-on-hover:hover {
+    background-image: url(img/blaagroen\ 2.gif);
+}
+
+.play-on-hover-right {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-image: url(img/vvvenue.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 0;
+}
+
+.play-on-hover-right:hover {
+  background-image: url(img/Billede\ til\ arrangement\ forside.jpg); /* Replace with the desired hover image */
+  position: relative; /* Ensure z-index works properly */
+}
+
+.play-on-hover-right::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0); /* Initially fully transparent */
+  z-index: 1;
+  transition: background-color 0.5s ease; /* Adding transition for smooth effect */
+}
+
+.play-on-hover-right:hover::before {
+  background-color: rgba(39, 80, 59, 0.5); /* Semi-transparent version of #27503B */
+}
+
+.tekst_clubvenue {
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    font-family: Helvetica, sans-serif;
+    color: white;
+    font-size: 16px;
+    z-index: 1;
+}
+
+.tekst_clubvenue.top {
+    top: 40px; /* Adjust as necessary for desired top margin */
+}
+
+.tekst_clubvenue.bottom {
+    bottom: 20px; /* Adjust as necessary for desired bottom margin */
+}
 
    /*event side*/
    #overskrift_arrangementer {
@@ -397,7 +479,7 @@ img.displayUpcomming_slide{
     border-radius: 10px;
   }
   
-  .text {
+  .tekst_venue {
     font-family: Helvetica, sans-serif;
     font-size: 16px;
     font-weight: bold;
@@ -479,56 +561,18 @@ img.displayUpcomming_slide{
 
 .event-box {
   width: 562px;
-  height: 647px;
+  height: 598px;
   background-color: #1b1919; 
   position: absolute;
   top: calc(50% + 450px); 
   left: 173px; 
-  padding: 20px;
-}
-
-.event-box h1 {
-  font-size: 24px;
-  margin-bottom: 10px;
-  text-align: left;
-}
-
-.event-box p {
-  margin: 10px 0;
-  text-align: left;
-}
-
-.ticket-box {
-  display: flex;
-  align-items: center;
-  margin-top: 20px;
-}
-
-.ticket-box button {
-  background-color: #000;
-  color: #fff;
-  border: none;
-  padding: 10px;
-  cursor: pointer;
-}
-
-.ticket-box span {
-  margin: 0 10px;
-  font-size: 18px;
 }
 .spotify-player {
   position: absolute;
   top: calc(50% + 450px); 
   right: 173px; 
 }
-.eventto-box {
-  position: absolute;
-  width: 496px;
-  height: 247px;
-  background-color: #1b1919; 
-  top: calc(50% + 850px); 
-  right: 173px; 
-}
+
   /*footer styling*/
 
 
